# embot

./: Cargo.toml  LICENSE  README.md
src/: channel_links.rs  embed_hook.rs  main.rs  new_link_message_sender.rs
src/commands/: link.rs  mod.rs
