[package]
name = "embot"
version = "0.1.0"
authors = ["StygianLightning <denrellum@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", features = [ "client", "framework", "standard_framework", "utils" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
